--- a/less/home-page.less
+++ b/less/home-page.less
@@ -6,8 +6,8 @@ body {
 
     #mainheader {
         display: flex;
-        width: 90%;
-        margin: 3rem 7rem;
+        width: 80%;
+        // margin: 3rem 7rem;
         justify-content: center;
         align-items: center;
         padding: 5rem;
