--- a/less/navigation.less
+++ b/less/navigation.less
@@ -5,18 +5,16 @@ header {
     .navbar {
        
         display: flex;
-        width: 100%;
+        width: 90%;
         justify-content: space-around;
         align-items: center;
 
         @media @tablet {
             flex-wrap: wrap;
-            padding: 2%;
         }
     
         @media @phone {
             flex-direction: column;
-            flex-wrap: wrap; 
             padding: 1rem;    
         }
 
@@ -72,7 +70,7 @@ header {
                     font-weight: bold;
                     margin: .5rem;
                     padding: .7rem;
-                    width: 40rem;
+                    width: 30rem;
                     align-items: center;
                 }
     
